# ultimate-nag52-fw-rs

./: .gitignore  Cargo.toml  README.md  SAME54P20A_patched.svd
bootloader/: Cargo.toml  README.md  build.rs  memory.x  test.cfg
bootloader/.cargo/: config.toml
bootloader/src/: bl_info.rs  isotp.rs  kwp.rs  lib.rs  main.rs  usb.rs  usb_isotp.rs
bsp/: Cargo.toml
bsp/src/: can_deps.rs  lib.rs
candb_codegen/: Cargo.toml
candb_codegen/src/: code_gen.rs  lib.rs  main.rs  parser.rs
diag_common/: Cargo.toml
diag_common/src/: dyn_panic.rs  ioctl.rs  lib.rs  ram_info.rs  userpage.rs
diag_common/src/isotp_endpoints/: can_isotp.rs  mod.rs  usb_isotp.rs
firmware/: Cargo.toml  build.rs  lib_exp.rs  memory.x
firmware/.cargo/: config  config.toml
firmware/can_data/: custom_can.txt  egs51.txt  egs52.txt  slave_mode.txt
firmware/src/: app_info.rs  main.rs  maths.rs  uart.rs
firmware/src/can/: mod.rs
firmware/src/can/data/: README.md  mod.rs
firmware/src/can/layer_impls/: egs52.rs  mod.rs
firmware/src/diag/: mod.rs
firmware/src/extern_flash/: mod.rs  partition.rs
firmware/src/os/: defmt_timestamp.rs  mod.rs  panic.rs
firmware/src/sensors/: mod.rs
firmware/src/tle8242/: commands.rs  mod.rs  solenoids.rs
firmware/src/usb/: mod.rs  uart.rs
flasher/: Cargo.toml  README.md
flasher/src/: main.rs  usb_diag_compat.rs
preloader/: Cargo.toml  build.rs  memory.x
preloader/.cargo/: config.toml
preloader/src/: main.rs
