[package]
name = "bsp"
version = "0.1.0"
edition = "2021"

[dependencies]
mcan = "0.7.0"
atsamd-hal = {workspace=true, features=[]}

# Patch USB-Device crate to support custom Descriptor buffer size, and Support setting USB Spec V1.0/1.1
[patch.crates-io]
usb-device = { git = "https://github.com/rust-embedded-community/usb-device", rev = "a6e6c9115c54fa18c11f41c6a8fcb98dd700912b" }

[package.metadata]
chip = "ATSAME54P20A"

