[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
bsp={path="../bsp"}
cortex-m = {version="0.7", features = ["critical-section-single-core"]}
atsamd-hal = {git="https://github.com/atsamd-rs/atsamd", branch="master", features=["same51j-rt", "can", "async", "rtic", "dma"] }
rtic = {version = "2.1.1", features=["thumbv7-backend"]}
rtic-monotonics = {version = "2.0.3", features = ["cortex-m-systick"]}
rtic-sync = {version="1.3.0"}
rtt-target = "0.6.0"
panic-rtt-target = { version = "0.2.0" }
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
fugit = "0.3.7"
mcan = "0.5.0"
cortex-m-rt = {version="0.7.5", features=["device"]}
packed_struct={version="0.10.1", default-features = false}
static_assertions = "1.1.0"

[profile.dev]
incremental = false
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"
codegen-units = 1

# For cargo flash
[package.metadata]
chip = "ATSAME51J20A"
