[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
bsp={path="../bsp"}
cortex-m = {version="0.7", features = ["critical-section-single-core"]}
atsamd-hal = {path="../../atsamd/hal", features=["same54p-rt", "can", "async", "dma", "usb", "defmt"]}
#atsamd-hal = {git="https://github.com/rnd-ash/atsamd", branch="adc_v2", features=["same54p-rt", "can", "async", "dma", "usb"]}
embedded-hal = {version="0.2.7", features=["unproven"]}
embedded-hal-nb = "1.0"
fugit = "0.3.7"
mcan = "0.7.0"
cortex-m-rt = {version="0.7.5", features=["device"]}
packed_struct={version="0.10.1", default-features = false}
static_assertions = "1.1.0"
critical-section = "1.2.0"
bitfield-struct = "0.9.5"
usbd-storage = {version="1.0.0", features=["scsi", "bbb"]}
usbd-serial = "0.2.2"

# Format and printing to SWD
defmt = "1.0.1"
defmt-rtt = "1.0.0"

# Embassy async and deps
embassy-executor={version="0.7.0", features=["arch-cortex-m", "executor-thread", "executor-interrupt"]}
systick-timer={version="0.1.1", features=["cortex-m", "embassy-time-driver"]}
embassy-time ={version="0.4.0", features=["tick-hz-100_000"]}
embassy-time-driver="0.2.0"
embassy-sync = "0.7.0"
static_cell = "2.1.0"
portable-atomic = "1.11.1"
heapless = "0.8.0"
usbd-ethernet = "0.4.0"
smoltcp = { version = "0.12", default-features = false, features = [
    "defmt",
    "socket-tcp",
    "socket-dhcpv4",
    "proto-ipv4",
] }

[build-dependencies]
candb_codegen = {path="../candb_codegen"}

# Patch USB-Device crate to support custom Descriptor buffer size, and Support setting USB Spec V1.0/1.1
[patch.crates-io]
usb-device = { git = "https://github.com/rust-embedded-community/usb-device", rev = "a6e6c9115c54fa18c11f41c6a8fcb98dd700912b" }


[profile.dev]
incremental = false
debug = true
lto = true

[profile.release]
debug = true
#strip="symbols"
lto = "fat"
opt-level = 3
codegen-units = 1
#panic="abort"

# For cargo flash
[package.metadata]
chip = "ATSAME54P20A"

