[package]
name = "preloader"
version = "0.1.0"
edition = "2024"

[dependencies]
atsamd-hal = { workspace = true, features = ["same54p-rt"] }
bootloader = { path = "../bootloader", features = ["lib"] }
cortex-m-rt.workspace = true
cortex-m.workspace = true
embedded-crc32c = "0.1.0"

# For cargo flash
[package.metadata]
chip = "ATSAME54P20A"
